--- a/06_langchain_caching.ipynb
+++ b/06_langchain_caching.ipynb
@@ -170,18 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "808057e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "password = os.getenv(\"REDIS_PASSWORD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "55f8f9b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bar\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"Basic connection example.\n",
     "\"\"\"\n",
@@ -193,7 +199,7 @@
     "    port=14093,\n",
     "    decode_responses=True,\n",
     "    username=\"default\",\n",
-    "    password=\"atMd4EPsas0H2xojpPehOLcPAOR8uAG9\",\n",
+    "    password=password,\n",
     ")\n",
     "\n",
     "success = r.set('foo', 'bar')\n",
@@ -204,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "c3cd1bb5",
    "metadata": {},
    "outputs": [
@@ -224,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "325fe117",
    "metadata": {},
    "outputs": [],
@@ -235,7 +241,7 @@
     "    redis_=Redis(\n",
     "        host='redis-14093.c340.ap-northeast-2-1.ec2.redns.redis-cloud.com',\n",
     "        port=14093,\n",
-    "        password='atMd4EPsas0H2xojpPehOLcPAOR8uAG9'\n",
+    "        password=password\n",
     "    )\n",
     "))"
    ]
